<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="140dp"
    android:background="@drawable/bg_bond_cards"
    android:layout_margin="30dp">
        <TextView
            android:id="@+id/bond_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="20dp"
            android:text="埃克森美 2.995% 2039年"
            android:textColor="@color/color_black"
            style="@style/styleA"></TextView>

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/bond_name">
            <TextView
                android:id="@+id/ref_sale_price_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/bond_name"
                android:text="@string/ref_sale_price"
                android:layout_weight="1"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textAlignment="viewStart"></TextView>

            <TextView
                android:id="@+id/tv_ref_ratio_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/bond_name"
                android:layout_toRightOf="@+id/ref_sale_price_title"
                android:text="@string/ref_ratio"
                android:layout_weight="1"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textAlignment="viewStart"></TextView>

            <TextView
                android:id="@+id/tv_ref_due_year_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/bond_name"
                android:layout_toRightOf="@+id/tv_ref_ratio_title"
                android:text="@string/due_year"
                android:layout_weight="1"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textAlignment="viewStart"></TextView>
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_title"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/ref_sale_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_title"
            android:text="101.94"
            android:textColor="@color/color_black"
            android:textSize="15sp"
            style="@style/styleA"
            android:layout_weight="1"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/tv_ref_ratio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_title"
            android:layout_toRightOf="@+id/ref_sale_price"
            android:text="2.31"
            android:textColor="@color/color_black"
            android:textSize="15sp"
            style="@style/styleA"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"/>

        <TextView
            android:id="@+id/tv_ref_due_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_title"
            android:layout_toRightOf="@id/tv_ref_ratio"
            android:text="8.85"
            android:textColor="@color/color_black"
            android:textSize="15sp"
            style="@style/styleA"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"/>
    </LinearLayout>


</RelativeLayout>